@@ -1,1 +1,4 @@
 o-optimize
+FilesystemImage
+FilesystemImage.c
+FilesystemImage.h
