@@ -50,7 +50,6 @@ rtems_task Init(
 #include <rtems/confdefs.h>
 #include <stdio.h>
 #include <rtems/rtems_bsdnet.h>
-#include <rtems/ftpd.h>
 #include <rtems/untar.h>
 
      
@@ -63,24 +62,11 @@ rtems_task Init(
 #include <sys/socket.h>
 #include "../networkconfig.h"
 
-#include <rtems_webserver.h>
-
-#define ARGUMENT 0
 
 /*
- *  The tarfile is built automatically externally so we need to account
- *  for the leading symbol on the names.
+ *  The tarfile image is built automatically externally.
  */
-#if defined(__sh__)
-  #define SYM(_x) _x
-#else
-  #define SYM(_x) _ ## _x
-#endif
-
-extern int SYM(binary_tarfile_start);
-extern int SYM(binary_tarfile_size);
-#define TARFILE_START SYM(binary_tarfile_start)
-#define TARFILE_SIZE SYM(binary_tarfile_size)
+#include "FilesystemImage.h"
 
 rtems_task Init(
   rtems_task_argument argument
@@ -96,7 +82,7 @@ rtems_task Init(
    * Load filesystem image
    */
   printf("=============== Loading filesystem image ===============\n");
-  status = Untar_FromMemory((void *)(&TARFILE_START), (size_t)&TARFILE_SIZE);
+  status = Untar_FromMemory((void *)FilesystemImage, FilesystemImage_size); 
    
   printf("============== Look at Local Filesystem ==============\n");
   printf( "PWD: " );
